--- a/first-vs-notebook.ipynb
+++ b/first-vs-notebook.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+---------+-------------------+\n",
-      "|CustomerID|FirstName|           LastName|\n",
-      "+----------+---------+-------------------+\n",
-      "|      1000|  Mathijs|Oosterhout-Rijntjes|\n",
-      "|      1001|    Joost|      van Brunswijk|\n",
-      "|      1002|     Stan|          Bokenkamp|\n",
-      "+----------+---------+-------------------+\n",
+      "+----------+---------+-------------------+----------+\n",
+      "|CustomerID|FirstName|           LastName|department|\n",
+      "+----------+---------+-------------------+----------+\n",
+      "|      1000|  Mathijs|Oosterhout-Rijntjes|      MKTG|\n",
+      "|      1001|    Joost|      van Brunswijk|       SVC|\n",
+      "|      1002|     Stan|          Bokenkamp|     SALES|\n",
+      "+----------+---------+-------------------+----------+\n",
       "\n"
      ]
     }
@@ -29,32 +29,19 @@
     "schema = StructType([\n",
     "  StructField('CustomerID', IntegerType(), False),\n",
     "  StructField('FirstName',  StringType(),  False),\n",
-    "  StructField('LastName',   StringType(),  False)\n",
+    "  StructField('LastName',   StringType(),  False),\n",
+    "  StructField('department',   StringType(),  False)\n",
     "])\n",
     "\n",
     "data = [\n",
-    "  [ 1000, 'Mathijs', 'Oosterhout-Rijntjes' ],\n",
-    "  [ 1001, 'Joost',   'van Brunswijk' ],\n",
-    "  [ 1002, 'Stan',    'Bokenkamp' ]\n",
+    "  [ 1000, 'Mathijs', 'Oosterhout-Rijntjes','MKTG' ],\n",
+    "  [ 1001, 'Joost',   'van Brunswijk' ,'SVC'],\n",
+    "  [ 1002, 'Stan',    'Bokenkamp' ,'SALES']\n",
     "]\n",
     "\n",
     "customers = spark.createDataFrame(data, schema)\n",
-    "customers.show()"
+    "customers.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -66,7 +53,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -80,12 +67,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8c544a3749644af604a3286d194392e219dfbb1dd69f151e85127aeb4d1a2946"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
