An explanatory and descriptive commit message here

--- a/first-vs-notebook.ipynb
+++ b/first-vs-notebook.ipynb
@@ -30,12 +30,13 @@
     "  StructField('CustomerID', IntegerType(), False),\n",
     "  StructField('FirstName',  StringType(),  False),\n",
     "  StructField('LastName',   StringType(),  False),\n",
+    "  StructField('department',   StringType(),  False)\n",
     "])\n",
     "\n",
     "data = [\n",
-    "  [ 1000, 'Mathijs', 'Oosterhout-Rijntjes' ],\n",
-    "  [ 1001, 'Joost',   'van Brunswijk'],\n",
-    "  [ 1002, 'Stan',    'Bokenkamp' ]\n",
+    "  [ 1000, 'Mathijs', 'Oosterhout-Rijntjes','MKTG' ],\n",
+    "  [ 1001, 'Joost',   'van Brunswijk' ,'SVC'],\n",
+    "  [ 1002, 'Stan',    'Bokenkamp' ,'SALES']\n",
     "]\n",
     "\n",
     "customers = spark.createDataFrame(data, schema)\n",
